grammar.js
    anubis_source: $ => seq(
      repeat($._top_item),
      optional(seq($.apg2, repeat($._top_item)))
    ),
 
    _top_item: $ => choice(
      $.out_comment,
      $.todo_line,
      $.par_read,
      $.par_execute,
      $.par_def,
      $.par_type,
      $.par_type_alias,
      $.par_describe,
      $.par_c_constructors,
    ),
 
    par_end: $ => $._enddot,
 
 
    // --- --- --- Small paragraphs
 
    // read path | transmit path  -- no end dot, ends with the path
    par_def: $ => seq(
      choice(
        $.kw_define,
        seq($.kw_module, optional(field('destination', $.adm_dest)))
      ),
      field('type', $.type),
      choice(
        // name, name(), name(args)
        seq(field('name', $.identifier), optional(seq("(", optional($.opargs), ")"))),
        // operator definitions: a + b, ~a
        seq($.operand, field('operator', $.binary_tok), $.operand),
        seq(field('operator', $.unary_tok), $.operand)
      ),
      optional(seq("=", field('body', $.term))),
      $.par_end
    ),
 
    // Module destination: "dir" | @"dir" | @@"dir"
    ty_name: $ => PREC.prec_sym_type(/[A-Z]\w*/),
 
    type: $ => PREC.prec_of_type(choice(
      seq("(", $.type, ")"),
 
      seq(choice($.ty_name, $.ty_pname), optional(seq("(", $._types1,
        choice(
          ")",
          seq(alias(/\)\s*->/, $.arrow), $.type)
        )
      ))),
 
      seq("(", $._typesargs1, alias(/\)\s*->/, $.arrow), $.type),
      seq("(", $._types2, ")"),
 
      seq($.type, $.arrow, $.type)
    )),
 
    _types1: $ => sep1($.type, null, null, ","),
 
    // Names inside function/tuple types are cosmetic (discarded by the compiler)
    _typesargs1: $ => choice(
      $.type,
      seq($.type, field('name', $.identifier)),
      seq($.type, ",", $._typesargs1),
      seq($.type, field('name', $.identifier), ",", $._typesargs1),
    ),
 
    _types2: $ => choice(
      seq($.type, ",", $.type),
      seq($.type, field('name', $.identifier), ",", $.type),
      seq($.type, ",", $.type, field('name', $.identifier)),
      seq($.type, field('name', $.identifier), ",", $.type, field('name', $.identifier)),
      seq($.type, ",", $._types2),
      seq($.type, field('name', $.identifier), ",", $._types2),
    ),
 
 
    // --- --- --- TERM
    term: $ => choice(
      $.identifier,
      $.lit_integer,
      $.lit_float,
      $.lit_char,
      $.lit_string,
      // Operators
      $.binary_op,
      $.unary_op,
      $.typecast,
      $.delegate,
      // Construction
      $.tuple,
      $.apply,
      $.replace,
      $.list,
      $.lambda,
      $.cross_rec,
      // Structure & Conditional
      $.with,
      $.conditional,
      // Other: Should not happen, todo,...
      $.snh,
      $.todo,
      $.builtin,
      $.checking_every,
      PREC.high(seq("(", $.term, ")"),)
    ),
 
 
    // yy__serialize | yy__unserialize | yy__cover | yy__uncover  lpar Term rpar
    identifier: $ => PREC.identifier(choice($._identifier, $._jocker)),
    _identifier: $ => /([a-z]|_[a-zA-Z0-9_])[a-zA-Z0-9_]*/,
    _jocker: $ => '_',
 
    // Binary op: this function generate a choice
    // We also generate the list of tokens (used when defining symbols)
    binary_op: $ => mkChoiceBinaryOp($, $.term, $.term),
    unary_op: $ => mkChoiceUnaryOp($, $.term),
    tuple: $ => PREC.pdelim(sep1($.term, "(", ")", ",")),
 
    // List. The cons dot is an end-dot (must be followed by a white).
    // [], [h . t], [a,...,z] and [a,b,c... . t]
    delegate: $ => PREC.comma(seq($._delegate, $.term, ",", $.term)),
    _delegate: $ => PREC.high(seq("delegate", optional(seq("(", $.term, ")")))),
 
    // with name = term, ..., term
    apply: $ => PREC.pdelim(seq(
      field("fun", $.term),
      choice(
        sep0(field("arg", $.term), "(", ")", ","),
        sep0(field("arg", $.term), "[", "]", ",")
      )
    )),
 
    // <term>[<name> <- <term>]
    lambda: $ => choice(
      $._lambda_simple,
      $._lambda_rec
    ),
 
    // (<function arguments>) |-> <term>
    // The ')' is folded into the `mapsto` token (see TOKS).
    _lambda_simple: $ => PREC.mapsto(seq(
      "(", $.fargs, $.mapsto, field('body', $.term)
    )),
 
    // (<function arguments>) |-f-> <term>
    _lambda_rec: $ => PREC.mapsto(seq(
      "(", $.fargs, alias($.mapstorec, $.mapsto), field('body', $.term)
    )),
 
    // Cross recursive closure
    farg: $ => PREC.comma(seq(
      field("type", choice($.type, alias("_", $.type_joker))),
      field("arg", $.identifier)
    )),

 
    // FArgs1: one or more, comma OPTIONAL between, none trailing
    fargs: $ => seq(
      $.farg,
      repeat(seq(optional(","), $.farg))
    ),
 
 
    // Lazy node:
    lazy: $ => "lazy",
 
    // OpArg: lazy? Type sym ( '[' Term ']' )?   -- collapses all four productions
    operand: $ => seq(
      optional(field("lazy", $.lazy)),
      field("type", $.type),
      field("arg", $.identifier),
      optional(seq("[", field("size", $.term), "]"))
    ),
 
    // OpArgs1: same shape as FArgs1
    opargs: $ => seq(
      $.operand,
      repeat(seq(optional(","), $.operand))
    ),
 
 
    // Conditional
    // 1 if <test> then <term> else <term>
    // 2 if <test> is not <term> then <term> else <term>
    // 3 if <test> is <case>
    // 4 if <test> is <case> else <term>
    // 5 if <term> is { <cases> }
    // 6 if <term> is { <cases> else <term> }
    // 7 since <test> is <term>, <term>
