test/corpus/par_term
================================================================================
Term paragraph, private, no body
================================================================================

define A a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (par_end)))

================================================================================
Term paragraph, private, inline no body ('inline' is anonymous)
================================================================================

define inline A a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (par_end)))

================================================================================
Literals and binop  0 * 1.0 + 'a' + "string"
================================================================================

define A a = 0 * 1.0 + 'a' + "string".

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (term
      (binary_op
        (term
          (binary_op
            (term
              (lit_integer))
            (star)
            (term
              (lit_float))))
        (plus)
        (term
          (binary_op
            (term
              (lit_char))
            (plus)
            (term
              (lit_string))))))
    (par_end)))

================================================================================
Minus '-' (check associativity)
================================================================================

define A a = 1 - 2 - 3.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (term
      (binary_op
        (term
          (binary_op
            (term
              (lit_integer))
            (minus)
            (term
              (lit_integer))))
        (minus)
        (term
          (lit_integer))))
    (par_end)))

================================================================================
Check unary
================================================================================

define A a = - 1 - + 2.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (term
      (binary_op
        (term
          (unary_op
            (minus)
            (term
              (lit_integer))))
        (minus)
        (term
          (unary_op
            (plus)
            (term
              (lit_integer))))))
    (par_end)))

================================================================================
Tuple
================================================================================

define A a = (a, (b, c), d).

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (term
      (tuple
        (term
          (identifier))
        (term
          (tuple
            (term
              (identifier))
            (term
              (identifier))))
        (term
          (identifier))))
    (par_end)))

================================================================================
Apply
================================================================================

define A a = a(b, (c, d)).

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (term
      (apply
        (term
          (identifier))
        (term
          (identifier))
        (term
          (tuple
            (term
              (identifier))
            (term
              (identifier))))))
    (par_end)))

================================================================================
Lambda
================================================================================

define A->A id = (A a)|->a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (type
        (ty_name))
      (arrow)
      (type
        (ty_name)))
    (identifier)
    (term
      (lambda
        (fargs
          (farg
            (type
              (ty_name))
            (identifier)))
        (mapsto)
        (term
          (identifier))))
    (par_end)))

================================================================================
Lambda rec
================================================================================

define A->A id = (_ a)|-f->a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (type
        (ty_name))
      (arrow)
      (type
        (ty_name)))
    (identifier)
    (term
      (lambda
        (fargs
          (farg
            (type_joker)
            (identifier)))
        (mapsto
          (identifier))
        (term
          (identifier))))
    (par_end)))

================================================================================
KW: delegate term, term.
================================================================================

define A a = delegate term, term.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (term
      (delegate
        (term
          (identifier))
        (term
          (identifier))))
    (par_end)))

================================================================================
KW: delegate (term) term, term.
================================================================================

define A a = delegate (term) term, term.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (term
      (delegate
        (term
          (identifier))
        (term
          (identifier))
        (term
          (identifier))))
    (par_end)))

================================================================================
Empty argument list
================================================================================

define Int f() = 0.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (term
      (lit_integer))
    (par_end)))

================================================================================
Arguments without comma separator
================================================================================

define Int f(Int a Int b) = a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (opargs
      (operand
        (type
          (ty_name))
        (identifier))
      (operand
        (type
          (ty_name))
        (identifier)))
    (term
      (identifier))
    (par_end)))

================================================================================
Lambda, multiple arguments without comma
================================================================================

define A->A g = (A a B b)|->a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (type
        (ty_name))
      (arrow)
      (type
        (ty_name)))
    (identifier)
    (term
      (lambda
        (fargs
          (farg
            (type
              (ty_name))
            (identifier))
          (farg
            (type
              (ty_name))
            (identifier)))
        (mapsto)
        (term
          (identifier))))
    (par_end)))

================================================================================
Immediately applied lambda (doc example)
================================================================================

define String f = ((String s) |-> "p_"+s)("gabu").

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    type: (type
      (ty_name))
    name: (identifier)
    body: (term
      (apply
        fun: (term
          (term
            (lambda
              (fargs
                (farg
                  type: (type
                    (ty_name))
                  arg: (identifier)))
              (mapsto)
              body: (term
                (binary_op
                  left: (term
                    (lit_string))
                  bop: (plus)
                  right: (term
                    (identifier)))))))
        arg: (term
          (lit_string))))
    (par_end)))

================================================================================
Lazy argument
================================================================================

define Int f(lazy Int a) = a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (opargs
      (operand
        (lazy)
        (type
          (ty_name))
        (identifier)))
    (term
      (identifier))
    (par_end)))

================================================================================
Sized argument
================================================================================

define Int f(Int a[10]) = a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (opargs
      (operand
        (type
          (ty_name))
        (identifier)
        (term
          (lit_integer))))
    (term
      (identifier))
    (par_end)))

================================================================================
Lazy sized argument
================================================================================

define Int f(lazy Int a[10]) = a.

--------------------------------------------------------------------------------

(anubis_source
  (par_def
    (kw_define)
    (type
      (ty_name))
    (identifier)
    (opargs
      (operand
        (lazy)
        (type
          (ty_name))
        (identifier)
        (term
          (lit_integer))))
    (term
      (identifier))
    (par_end)))
